# SiriusToolbox

./: .gitignore  CHANGELOG.md  README.md  main.py  pyproject.toml  start-webui.bat
.github/: copilot-instructions.md
.github/skills/sirius-toolbox-architecture/: SKILL.md
.github/skills/sirius-toolbox-architecture-spec/: SKILL.md
.github/skills/sirius-toolbox-build/: SKILL.md
.github/skills/sirius-toolbox-governance/: SKILL.md
.github/skills/sirius-toolbox-version-control/: SKILL.md
.github/workflows/: release.yml
docs/: architecture.md
scripts/: bootstrap-webui.ps1
src/sirius_toolbox/: __init__.py  app.py  settings.py
src/sirius_toolbox/collectors/: __init__.py
src/sirius_toolbox/collectors/browser/: __init__.py  base.py
src/sirius_toolbox/collectors/browser/xiaohongshu/: __init__.py  collector.py  parser.py  selectors.py
src/sirius_toolbox/collectors/maps/: __init__.py  base.py
src/sirius_toolbox/collectors/maps/baidu/: __init__.py  client.py  mapper.py
src/sirius_toolbox/core/: __init__.py  exceptions.py  logging.py  runtime_preflight.py  types.py
src/sirius_toolbox/exporters/: __init__.py  social_report.py
src/sirius_toolbox/storage/: __init__.py  base.py  jsonl_store.py  sqlite_store.py
src/sirius_toolbox/tasks/: __init__.py  handlers.py  models.py  queue.py  scheduler.py
src/sirius_toolbox/webui/: __init__.py  server.py
tests/unit/: test_jsonl_store.py  test_poi_handler.py  test_social_handler.py  test_social_report_export.py  test_task_queue.py  test_webui_async_tasks.py  test_webui_records.py  test_xhs_parser.py
(+3 files in other folders)
