[project]
name = "siriustoolbox"
version = "0.1.0"
description = "Data collection toolbox for social content and map POI ingestion"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
	"httpx>=0.28.0",
	"openpyxl>=3.1.5",
	"pillow>=11.0.0",
	"playwright>=1.52.0",
	"pydantic>=2.8.0",
	"pytest>=9.0.2",
	"tenacity>=9.0.0",
]
